First set of predictions
Round 9
Wolverhampton 1 -  1 Watford
West Ham 1 -  2 Tottenham
Newcastle 1 -  1 Brighton
Manchester City 2 -  1 Burnley
Huddersfield 0 -  2 Liverpool
Everton 1 -  1 Crystal Palace
Chelsea 2 -  1 Manchester United
Cardiff 2 -  2 Fulham
Bournemouth 2 -  1 Southampton
Arsenal 2 -  1 Leicester

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Python: Current File (Integrated Terminal)",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "${workspaceFolder}/predictor.py",
             "console": "integratedTerminal",
-            "stopOnEntry": true
+            "stopOnEntry": false
         },
         {
             "name": "Python: Attach",
